use momentjs to render dates

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -3,20 +3,21 @@
   <head>
     <link   type="text/css" rel="stylesheet" href="static/report.css"/>
     <!-- jQuery gubbins -->
-    <link  href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.js"></script>
-    <link  href="static/ui.dynatree.css" rel="stylesheet" type="text/css"/>
-    <link  href="static/jquery.jqplot.min.css" rel="stylesheet" type="text/css"/>
-    <script src="static/jquery.dynatree.js" type="text/javascript"></script>
-    <script src="static/jquery.jqote2.js"></script>
-    <script src="static/jquery.dataTables.js"></script>
-    <script src="static/jquery.tablesorter.js"></script>
-    <script src="static/jquery.jqplot.min.js"></script>
-    <script src="static/jqplot.categoryAxisRenderer.min.js"></script>
-    <script src="static/jqplot.barRenderer.min.js"></script>
-    <script src="static/jqplot.pieRenderer.min.js"></script>
-    <script src="static/underscore.js"></script>
+    <link   href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.js"></script>
+    <link   href="static/ui.dynatree.css" rel="stylesheet" type="text/css"/>
+    <link   href="static/jquery.jqplot.min.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="static/jquery.dynatree.js" type="text/javascript"></script>
+    <script type="text/javascript" src="static/jquery.jqote2.js"></script>
+    <script type="text/javascript" src="static/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="static/jquery.tablesorter.js"></script>
+    <script type="text/javascript" src="static/jquery.jqplot.min.js"></script>
+    <script type="text/javascript" src="static/jqplot.categoryAxisRenderer.min.js"></script>
+    <script type="text/javascript" src="static/jqplot.barRenderer.min.js"></script>
+    <script type="text/javascript" src="static/jqplot.pieRenderer.min.js"></script>
+    <script type="text/javascript" src="static/underscore.js"></script>
+    <script type="text/javascript" src="static/moment.js"></script>
     <script type="text/javascript" src="static/report.js"></script>
     <script type="text/javascript" src="static/coverage.js"></script>
     <script type="text/javascript">
