use en-gb for time

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -21,6 +21,9 @@
     <script type="text/javascript" src="static/report.js"></script>
     <script type="text/javascript" src="static/coverage.js"></script>
     <script type="text/javascript">
+      moment.lang('en-gb');
+    </script>
+    <script type="text/javascript">
       $(document).ready(function() {
         $report.tabs({
           spinner : function() {},
