add incremental regression view

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="static/jqplot.barRenderer.min.js"></script>
     <script type="text/javascript" src="static/jqplot.pieRenderer.min.js"></script>
     <script type="text/javascript" src="static/underscore.js"></script>
+    <script type="text/javascript" src="static/oboe.js"></script>
     <script type="text/javascript" src="static/moment.js"></script>
     <script type="text/javascript" src="static/report.js"></script>
     <script type="text/javascript" src="static/coverage.js"></script>
